--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "history": "^4.10.1",
     "markdown-to-jsx": "^6.11.0",
+    "mobx": "^5.15.4",
     "react": "^16.12.0",
     "react-alert": "^6.0.0",
     "react-alert-template-basic": "^1.0.0",
