--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "connected-react-router": "^6.7.0",
     "history": "^4.10.1",
+    "immutable": "^4.0.0-rc.12",
     "markdown-to-jsx": "^6.11.0",
     "mobx": "^5.15.4",
     "react": "^16.12.0",
@@ -22,9 +24,13 @@
     "react-dom": "^16.12.0",
     "react-leaf-carousel": "^2.0.0",
     "react-multi-carousel": "^2.5.2",
+    "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "redux": "^4.0.5",
+    "redux-immutable": "^4.0.0",
+    "redux-saga": "^1.1.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2"
   },
