--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "react-dom": "^16.12.0",
     "react-leaf-carousel": "^2.0.0",
     "react-multi-carousel": "^2.5.2",
+    "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "redux": "^4.0.5",
+    "redux-immutable": "^4.0.0",
+    "redux-saga": "^1.1.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2"
   },
