--- a/package.json
+++ b/package.json
@@ -15,19 +15,20 @@
     "immutable": "^4.0.0-rc.12",
     "markdown-to-jsx": "^6.11.0",
     "mobx": "^5.15.4",
-    "react": "^16.12.0",
+    "react": "^16.13.0",
     "react-alert": "^6.0.0",
     "react-alert-template-basic": "^1.0.0",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-css-transition-replace": "^4.0.2",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.0",
     "react-leaf-carousel": "^2.0.0",
     "react-multi-carousel": "^2.5.2",
     "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-immutable": "^4.0.0",
     "redux-saga": "^1.1.3",
